--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.0",
     "@types/react-slick": "^0.23.13",
+    "bootstrap": "^5.3.7",
     "next": "15.4.5",
+    "nodemailer": "^7.0.5",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
