🐛 バグの修正

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2017",
+    "baseUrl": ".",
+    "paths": {
+      "@/styles/*": ["styles/*"]},
     "lib": [
       "dom",
       "dom.iterable",
