--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.5.0",
     "@types/nodemailer": "^7.0.0",
     "@types/react-slick": "^0.23.13",
     "bootstrap": "^5.3.7",
+    "gray-matter": "^4.0.3",
+    "microcms-js-sdk": "^3.2.0",
     "next": "15.4.5",
     "nodemailer": "^7.0.5",
     "postcss": "^8.5.6",
+    "raw-loader": "^4.0.2",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
+    "sass": "^1.90.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
